--- a/stylesheets/scenes.css
+++ b/stylesheets/scenes.css
@@ -79,7 +79,7 @@ SPEECHBUBBLE FOR EVERY SCENE USEABLE
     background: black;
     border:1px solid green;
     width:70%;
-    height:50%;
+    height:100%;
     position: relative;
     margin-left:auto;
     margin-right:auto;
